Animations inside a Details tag only fire once https://bugs.webkit.org/show_bug.cgi?id=254401

Reviewed by Antti Koivisto.

We should always cancel declarative animations in case of a Full teardown, and never
in the FullAfterSlotChange case. We remove the FALLTHROUGH to make this all clearer
and better distinguish the Full and FullAfterSlotChange cases.

* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/animation-canceled-by-parent-details-element-being-closed-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/animation-canceled-by-parent-details-element-being-closed.html: Added.
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::tearDownRenderers):

Canonical link: https://commits.webkit.org/262076@main